2003-01-29  Mark Mitchell  <mark@codesourcery.com>

	* c-common.c (builtin_define_float_constants): Define
	__<TYPE>_HAS_INFINITY__ and __<TYPE>_HAS_QUIET_NAN__.

2003-01-30  Kazu Hirata  <kazu@cs.umass.edu>

	* config/sh/lib1funcs.asm: Fix comment typos.
	* config/sh/linux.h: Likewise.
	* config/sh/sh.c: Likewise.
	* config/sh/sh.md: Likewise.

2003-01-30  Loren James Rittle  <ljrittle@acm.org>

	* objc/Make-lang.in (objc-parse.y): Find c-parse.in in $(srcdir).

2003-01-30  Alexandre Oliva  <aoliva@redhat.com>

	* config/fp-bit.h (__make_dp): Declare if TMODES.

2003-01-29  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.h (PREDICATE_CODES): Add entries for
	general_operand_src and general_operand_dst.

2003-01-29  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.c (function_arg_pass_by_reference):
	Return true for variable sized types.
	(rs6000_va_arg): Handle variable sized types passed by reference
	on non-SVR4 ABI.

2003-01-29  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (arm_legtimize_address): New function.
	* arm-protos.h (arm_legtimize_address): Add prototype.
	* arm.h (ARM_LEGITIMIZE_ADDRESS): Use arm_legitimize_address.
	(LEGITIMIZE_ADDRESS, THUMB_LEGITIMIZE_ADDRESS): Wrap with
	do ... while (0)

2003-01-29  Joel Sherrill  <joel@OARcorp.com>

	* gthr-rtems.h: Define __GTHREAD_MUTEX_INIT.  Apparently no code
	depended on it being defined until now. This was tracked as PR9296.

2003-01-13  Joel Sherrill  <joel@OARcorp.com>

	* config/mips/rtems.h: Predefine __USE_INIT_FINI__ so generic
	RTEMS code knows which C++ initialization style the toolset
	configuration is using. This was tracked as PR9295.

2003-01-29  Joel Sherrill  <joel@OARcorp.com>

	* config/m68k/t-crtstuff: Replace spaces with tabs, add 
	 $(MULTILIB_CFLAGS) as compiler option and multilib crtbegin/end.o.
	This issue was tracked as PR9293.

2003-01-29  Joel Sherrill  <joel@OARcorp.com>

	* config.gcc (hppa1.1-rtems):  Did not include t-rtems nor enable
	RTEMS threads.